@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.69 2005/02/10 06:14:08 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.70 2005/02/18 07:15:01 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  18 Feb 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Created GLISayWhat module.
   
   10 Feb 2005; Preston Cody <codeman@gentoo.org>
   updates to TODO list.
